Added tab sidebar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
                 </div>
             </div>
         </div>
-
+        <div class="tabs">
+            <div class="tabs__sidebar">
+                <button class="tabs__button tabs__button--active" data-for-tab="1">Item1</button>
+                <button class="tabs__button" data-for-tab="2">Item2</button>
+                <button class="tabs__button" data-for-tab="3">Item3</button>
+                <button class="tabs__button" data-for-tab="4">Item4</button>
+                <button class="tabs__button" data-for-tab="5">Item5</button>
+                <button class="tabs__button" data-for-tab="6">Item6</button>
+                <button class="tabs__button" data-for-tab="7">Item7</button>
+                <button class="tabs__footer">2015</button>
+            </div>
+        </div>
 
     </div>
 </body>
