--- a/index.html
+++ b/index.html
@@ -29,6 +29,66 @@
                 <button class="tabs__button" data-for-tab="7">Item7</button>
                 <button class="tabs__footer">2015</button>
             </div>
+            <div class="tabs__content tabs__content--active" data-tab="1">
+                <h2>Tab#1</h2>
+                <p>Lorem ipsum Nihil dolor possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta
+                    cursus lectusconsectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non, volutpat vel tortor. Inte Lorem ipsum Nihil dolor possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident
+                    eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta cursus lectusconsectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non, volutpat vel tortor. Intger laoreet
+                    placerat suscipit. Sed sodales sce. Proin nunc erat, gravida a facilisis quis, ornare id lectus. Tab 3 Container
+                </p>
+            </div>
+            <div class="tabs__content tabs__content--active" data-tab="2">
+                <h2>Tab#2</h2>
+                <p>Improved own provided blessing may peculiar domestic. Sight house has sex never. No visited raising gravity outward subject my cottage mr be. Hold do at tore in park feet near my case. Invitation at understood occasional sentiments insipidity
+                    inhabiting in. Off melancholy alteration principles old. Is do speedily kindness properly oh. Respect article painted cottage he is offices parlors. Raising say express had chiefly detract demands she. Quiet led own cause three him.
+                    Front no party young abode state up. Saved he do fruit woody of to. Met defective are allowance two perceived listening consulted contained. It chicken oh colonel pressed excited suppose to shortly. He improve started no we manners
+                    however effects. Prospect humoured mistress to by proposal marianne attended. Simplicity the far admiration preference everything. Up help home head spot an he room in. Not far stuff she think the jokes. Going as by do known noise
+                    he wrote round leave. Warmly put branch people narrow see. Winding its waiting yet parlors married own feeling.
+                </p>
+            </div>
+            <div class="tabs__content tabs__content--active" data-tab="3">
+                <h2>Tab#3</h2>
+                <p>Abilities forfeited situation extremely my to he resembled. Old had conviction discretion understood put principles you. Match means keeps round one her quick. She forming two comfort invited. Yet she income effect edward. Entire desire
+                    way design few. Mrs sentiments led solicitude estimating friendship fat. Meant those event is weeks state it to or. Boy but has folly charm there its. Its fact ten spot drew. Respect forming clothes do in he. Course so piqued no an
+                    by appear. Themselves reasonable pianoforte so motionless he as difficulty be. Abode way begin ham there power whole. Do unpleasing indulgence impossible to conviction. Suppose neither evident welcome it at do civilly uncivil. Sing
+                    tall much you get nor. Is at purse tried jokes china ready decay an. Small its shy way had woody downs power. To denoting admitted speaking learning my exercise so in. Procured shutters mr it feelings. To or three offer house begin
+                    taken am at. As dissuade cheerful overcame so of friendly
+                </p>
+            </div>
+            <div class="tabs__content tabs__content--active" data-tab="4">
+                <h2>Tab#4</h2>
+                <p>Lorem ipsum Nihil dolor possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta
+                    cursus lectusconsectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non, volutpat vel tortor. Inte Lorem ipsum Nihil dolor possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident
+                    eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta cursus lectusconsectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non, volutpat vel tortor. Intger laoreet
+                    placerat suscipit. Sed sodales sce. Proin nunc erat, gravida a facilisis quis, ornare id lectus. Tab 3 Container
+                </p>
+            </div>
+            <div class="tabs__content tabs__content--active" data-tab="5">
+                <h2>Tab#5</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore necessitatibus nobis quaerat, quidem modi repellendus nemo \quam error beatae ipsam possimus. Distinctio amet est facere minus qui quaerat saepe culpa?Lorem ipsum Nihil dolor
+                    possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta cursus lectusconsectetur
+                    adipiscing elit. Vestibulum nibh urna, euismod ut ornare non, volutpat vel tortor. Inte Lorem ipsum Nihil dolor possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident eveniet ipsam iure
+                    deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta cursus lectusconsectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non, volutpat vel tortor. Intger laoreet placerat suscipit.
+                    Sed sodales sce. Proin nunc erat, gravida a facilisis quis, ornare id lectus. Tab 3 Container
+                </p>
+            </div>
+            <div class="tabs__content tabs__content--active" data-tab="6">
+                <h2>Tab#6</h2>
+                <p>On projection apartments unsatiable so if he entreaties appearance. Rose you wife how set lady half wish. Hard sing an in true felt. Welcomed stronger if steepest ecstatic an suitable finished of oh. Entered at excited at forming between
+                    so produce. Chicken unknown besides attacks gay compact out you. Continuing no simplicity no favourable on reasonably melancholy estimating. Own hence views two ask right whole ten seems. What near kept met call old west dine. Our
+                    announcing sufficient why pianoforte. Yet remarkably appearance get him his projection. Diverted endeavor bed peculiar men the not desirous. Acuteness abilities ask can offending furnished fulfilled sex.
+                </p>
+            </div>
+            <div class="tabs__content tabs__content--active" data-tab="7">
+                <h2>Tab#7</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore necessitatibus nobis quaerat, quidem modi repellendus nemo quam error beatae ipsam possimus. Distinctio amet est facere minus qui quaerat saepe culpa? Lorem ipsum Nihil dolor
+                    possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta cursus lectusconsectetur
+                    Certainly elsewhere my do allowance at. The address farther six hearted hundred towards husband. Are securing off occasion remember daughter replying. Held that feel his see own yet. Strangers ye to he sometimes propriety in. She right
+                    plate seven has. Bed who perceive judgment did marianne. Talent she for lively eat led sister. Entrance strongly packages she out rendered get quitting denoting led. Dwelling confined improved it he no doubtful raptures. Several carried
+                    through an of up attempt gravity. Situation to be at offending elsewhere distrusts if. Particular use for considered projection cultivated. Worth of do doubt shall it their. Extensive existence up me contained he pronounce do. Excellence
+                    inquietude assistance precaution any impression man sufficient.
+                </p>
+            </div>
         </div>
 
     </div>
