--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="scss/main.css">
 
     <title>Lab 3</title>
 </head>
@@ -92,6 +93,7 @@
         </div>
 
     </div>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
