--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 <body>
     <div id="wrapper">
         <div class="header">
-            <div id="brust-8" class="logo">
-                <div class="header_title">
-                    <h1>Frontend test, second level</h1>
-                </div>
+            <div id="burst-8" class="logo"></div>
+            <div class="header__title">
+                <h1>Frontend test, second level</h1>
             </div>
         </div>
         <div class="tabs">
@@ -38,7 +37,7 @@
                     placerat suscipit. Sed sodales sce. Proin nunc erat, gravida a facilisis quis, ornare id lectus. Tab 3 Container
                 </p>
             </div>
-            <div class="tabs__content tabs__content--active" data-tab="2">
+            <div class="tabs__content" data-tab="2">
                 <h2>Tab#2</h2>
                 <p>Improved own provided blessing may peculiar domestic. Sight house has sex never. No visited raising gravity outward subject my cottage mr be. Hold do at tore in park feet near my case. Invitation at understood occasional sentiments insipidity
                     inhabiting in. Off melancholy alteration principles old. Is do speedily kindness properly oh. Respect article painted cottage he is offices parlors. Raising say express had chiefly detract demands she. Quiet led own cause three him.
@@ -47,7 +46,7 @@
                     he wrote round leave. Warmly put branch people narrow see. Winding its waiting yet parlors married own feeling.
                 </p>
             </div>
-            <div class="tabs__content tabs__content--active" data-tab="3">
+            <div class="tabs__content" data-tab="3">
                 <h2>Tab#3</h2>
                 <p>Abilities forfeited situation extremely my to he resembled. Old had conviction discretion understood put principles you. Match means keeps round one her quick. She forming two comfort invited. Yet she income effect edward. Entire desire
                     way design few. Mrs sentiments led solicitude estimating friendship fat. Meant those event is weeks state it to or. Boy but has folly charm there its. Its fact ten spot drew. Respect forming clothes do in he. Course so piqued no an
@@ -56,7 +55,7 @@
                     taken am at. As dissuade cheerful overcame so of friendly
                 </p>
             </div>
-            <div class="tabs__content tabs__content--active" data-tab="4">
+            <div class="tabs__content" data-tab="4">
                 <h2>Tab#4</h2>
                 <p>Lorem ipsum Nihil dolor possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta
                     cursus lectusconsectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non, volutpat vel tortor. Inte Lorem ipsum Nihil dolor possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident
@@ -64,7 +63,7 @@
                     placerat suscipit. Sed sodales sce. Proin nunc erat, gravida a facilisis quis, ornare id lectus. Tab 3 Container
                 </p>
             </div>
-            <div class="tabs__content tabs__content--active" data-tab="5">
+            <div class="tabs__content" data-tab="5">
                 <h2>Tab#5</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore necessitatibus nobis quaerat, quidem modi repellendus nemo \quam error beatae ipsam possimus. Distinctio amet est facere minus qui quaerat saepe culpa?Lorem ipsum Nihil dolor
                     possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta cursus lectusconsectetur
@@ -73,14 +72,14 @@
                     Sed sodales sce. Proin nunc erat, gravida a facilisis quis, ornare id lectus. Tab 3 Container
                 </p>
             </div>
-            <div class="tabs__content tabs__content--active" data-tab="6">
+            <div class="tabs__content" data-tab="6">
                 <h2>Tab#6</h2>
                 <p>On projection apartments unsatiable so if he entreaties appearance. Rose you wife how set lady half wish. Hard sing an in true felt. Welcomed stronger if steepest ecstatic an suitable finished of oh. Entered at excited at forming between
                     so produce. Chicken unknown besides attacks gay compact out you. Continuing no simplicity no favourable on reasonably melancholy estimating. Own hence views two ask right whole ten seems. What near kept met call old west dine. Our
                     announcing sufficient why pianoforte. Yet remarkably appearance get him his projection. Diverted endeavor bed peculiar men the not desirous. Acuteness abilities ask can offending furnished fulfilled sex.
                 </p>
             </div>
-            <div class="tabs__content tabs__content--active" data-tab="7">
+            <div class="tabs__content" data-tab="7">
                 <h2>Tab#7</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore necessitatibus nobis quaerat, quidem modi repellendus nemo quam error beatae ipsam possimus. Distinctio amet est facere minus qui quaerat saepe culpa? Lorem ipsum Nihil dolor
                     possimus magni, voluptatibus architecto distinctio sunt, soluta iusto excepturi quaerat quo, provident eveniet ipsam iure deleniti cum quibusdam nemo maxime! Lorem ipsum dolor sit amet, lerisque commodo. Nam porta cursus lectusconsectetur
